problem over text overflow resolved

--- a/styles/components/main-page/cryptoData.css
+++ b/styles/components/main-page/cryptoData.css
@@ -139,11 +139,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100vw;
+        
 
     }
     .crypto__description {
         color: var(--clr-slate600);
         font-size: var(--size-base);
+        width: 100%;
+        overflow-wrap:break-word;
     }
     .introduction__text-background{
         background-color: #2e2e2e;
